[package]
name = "api-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
heck = "0.4.0"
indoc = "1.0.7"
k9 = "0.11.5"
pico-args = "0.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
string_template = "0.2.1"
